--- a/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
@@ -10,6 +10,7 @@
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
+<link rel="stylesheet" href="../resources/css/styleusuario.css"/>
 </h:head> 
 <body >
 
@@ -105,7 +106,33 @@
     		  <h:messages errorStyle="color:red" infoStyle="color:green"   /> <br />
 	</div>	
 	</h:form>
-	
+	 <div id="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<img id="footer-logo" src="../resources/img/404-notfound-logo.png" alt="Logo404" />
+					 
+				</div><!-- /.col -->
+				<div class="col-md-3">
+					<ul>
+						<li><a href="../GestionUsuarios/GestionUsuarios.xhtml">Gestion de Usuarios</a></li>
+						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones</a></li>
+						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a></li>
+					</ul>
+				</div><!-- /.col -->
+				<div class="col-md-3">
+					<ul>
+						<li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+						<li><a href="#" data-toggle="modal" data-target="#contacto-modal">Contacto</a></li>
+					</ul>
+				</div><!-- /.col -->
+				<div class="col-md-3">
+					<p style="color:#DDD;">Copyright &copy; 404-NotFound</p>
+				</div><!-- /.col -->
+			</div><!-- /.row -->
+
+		</div><!-- /.container -->
+	</div>
 </body> 
 </html>
 
