--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -7,18 +7,19 @@
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
+<link rel="stylesheet" href="../resources/css/styleusuario.css"/>
 <ui:insert name="index"/>
 </h:head>
 <body>
 	
-	<nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top"  style="border-bottom: 4px solid #FF8F00;">
     <div class="container">
       <a class="navbar-brand" href="../GestionUsuarios/Index.xhtml">Green Place</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+      <div class="collapse navbar-collapse" id="navbarResponsive" >
+        <ul class="navbar-nav ml-auto" >
           <li class="nav-item active">
             <a class="nav-link" href="../GestionUsuarios/GestionUsuarios.xhtml">Gestion de Usuarios     </a>
           </li>
@@ -66,9 +67,9 @@
 				
 	</h:form>
 
-	<h3 style="text-align:center">Usuarios seleccionados</h3>
-	<h:form id="formTabla">
-	<h:dataTable value="#{usuario.usuariosSeleccionados}"
+	<h3 style="text-align:center;">Usuarios seleccionados</h3>
+	<h:form id="formTabla" >
+	<h:dataTable  value="#{usuario.usuariosSeleccionados}"
 		var="usuTabla"
 		  class="table table-striped table-dark">
    
@@ -119,5 +120,32 @@
 		
 	</h:dataTable>
 	</h:form>
+	<div id="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<img id="footer-logo" src="../resources/img/404-notfound-logo.png" alt="Logo404" />
+					 
+				</div><!-- /.col -->
+				<div class="col-md-3">
+					<ul>
+						<li><a href="../GestionUsuarios/GestionUsuarios.xhtml">Gestion de Usuarios</a></li>
+						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones</a></li>
+						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a></li>
+					</ul>
+				</div><!-- /.col -->
+				<div class="col-md-3">
+					<ul>
+						<li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+						<li><a href="#" data-toggle="modal" data-target="#contacto-modal">Contacto</a></li>
+					</ul>
+				</div><!-- /.col -->
+				<div class="col-md-3">
+					<p style="color:#DDD;">Copyright &copy; 404-NotFound</p>
+				</div><!-- /.col -->
+			</div><!-- /.row -->
+
+		</div><!-- /.container -->
+	</div>
 </body>
 </html>
