--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -10,15 +10,17 @@
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
+<link rel="stylesheet" href="../resources/css/style.css"/>
 </h:head> 
 <body> 
+
 <f:metadata>
     <f:viewParam name="id" value="#{usuario.id}" />
     <f:event type="preRenderView" listener="#{usuario.preRenderViewListener()}"/>
 </f:metadata>
 
 <h:form id="idDatosEmpleado2">
- <div class="card border-success mb-12" style="max-width:100rem;margin-left:15px"  >
+ <div class="card border-success mb-12" style="max-width:100rem;margin-left:15px;margin-top:20px"  >
 		<ul class="list-group" style="text-align:left">
 	  	  <li class="list-group-item active bg-success">Modificación de Usuario</li><br></br>
 	  		<h2 style="text-align:left;margin-left:15px" class="text-muted" >Datos del Usuario:</h2><br> </br>
@@ -109,7 +111,33 @@
 	 <h:messages errorstyle="color:red" infostyle="color:green"   /> <br />
   </div>
 </h:form>
+	 <div id="footer" style="bottom:0px" >
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<img id="footer-logo" src="../resources/img/404-notfound-logo.png" alt="Logo404" />
+					 
+				</div><!-- /.col -->
+				<div class="col-md-3">
+					<ul>
+						<li><a href="../GestionUsuarios/GestionUsuarios.xhtml">Gestion de Usuarios</a></li>
+						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones</a></li>
+						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a></li>
+					</ul>
+				</div><!-- /.col -->
+				<div class="col-md-3">
+					<ul>
+						<li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+						<li><a href="mailto:404NotFound@gmail.com?body=Escriba su mensaje&amp;subject=Consulta desde el formulario de contacto">Contacto</a></li>
+					</ul>
+				</div><!-- /.col -->
+				<div class="col-md-3">
+					<p style="color:#DDD;">Copyright &copy; 404-NotFound</p>
+				</div><!-- /.col -->
+			</div><!-- /.row -->
 
+		</div><!-- /.container -->
+	</div>
 </body> 
 </html>
 
