--- a/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
@@ -34,8 +34,8 @@
 	  
 	</ul>
 	
-	<div style="display:block; text-align:center; margin-top: 20px" >	
-	<h:link value="Volver" outcome="GestionUsuarios.xhtml" class="btn btn-outline-success" /><br/><br/>
+	<div style="display:block; text-align:center; margin-top: 50px" >	
+	<h:link value="Volver" outcome="GestionUsuarios.xhtml" class="btn btn-success" /><br/><br/>
 	</div>
 		<h:messages   style="color:red;margin:8px;" />
 		
