--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -34,6 +34,11 @@
              #{login.username} 
              </div>
           </li>
+          <li>
+               <h:form class="form-group">
+               <h:commandLink action="#{login.logout}" value="Salir" class="btn btn-success"></h:commandLink>
+               </h:form>
+          </li>
         </ul>
       </div>
     </div>
@@ -42,7 +47,7 @@
 	<h:form class="form-group">
 		<h:messages style="color:red;margin:8px;" />
 		<h:commandLink value="Alta de usuario" 	action="AltaUsuario" class="btn btn-outline-success" style="margin-top: 100px"></h:commandLink>
-		<h:commandLink action="#{login.logout}" value="Logout" class="btn btn-outline-success" style="margin-top: 101px"></h:commandLink>
+		
 			
 			
 				<div class="form-row">
