--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -10,7 +10,7 @@
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
-<link rel="stylesheet" href="../resources/css/style.css"/>
+<link rel="stylesheet" href="../resources/css/styleusuario.css"/>
 </h:head> 
 <body> 
 
