--- a/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
@@ -34,6 +34,11 @@
              #{login.username} 
              </div>
           </li>
+          <li>
+               <h:form class="form-group">
+               <h:commandLink action="#{login.logout}" value="Salir" class="btn btn-success"></h:commandLink>
+               </h:form>
+          </li>
         </ul>
       </div>
     </div>
