--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -35,9 +35,12 @@
              #{login.username} 
              </div>
           </li>
-            <li class="nav-item active">
-            <h:commandLink action="#{login.logout}"  class="close" style="margin-right:1px;color:white;" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></h:commandLink>
+          <li>
+               <h:form class="form-group">
+               <h:commandLink action="#{login.logout}" value="Salir" class="btn btn-success"></h:commandLink>
+               </h:form>
           </li>
+            
         </ul>
       </div>
     </div>
