--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -54,6 +54,11 @@
              #{login.username}
              </div>
              </li>
+               <li>
+               <h:form class="form-group">
+               <h:commandLink action="#{login.logout}" value="Salir" class="btn btn-success"></h:commandLink>
+               </h:form>
+          </li>
         </ul>
       </div>
     </div>
