Se agrega un contador de pendientes

--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -25,7 +25,9 @@
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones</a>
+            <a class="nav-link" href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones
+            <span class="badge badge-light"> #{observacion.totalPen}</span>
+            </a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a>
