--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -49,7 +49,7 @@
       	         </div>
       	         <div class="form-group col-md-3">
 	   		       <label for="tipoUsuario" >Tipo de Usuario:</label>
-				    <h:selectOneMenu class="form-control" value="#{usuario.tipousuario}" >
+				    <h:selectOneMenu class="form-control"  value="#{usuario.usuarioSeleccionado.tipousuario.nombre}">
 	   				<f:selectItems value="#{usuario.tiposUsuarios}" var="tipos" itemValue="#{tipos.nombre}" 
 	   				itemLabel="#{tipos.nombre}"></f:selectItems>
 	   				</h:selectOneMenu>
@@ -74,11 +74,13 @@
 	          </div>
 	  	<div class="form-row" style="margin-left:25px"> 
 			 <div class="form-group col-md-3">
-	   		       <label for="tipoUsuario" >Tipo de Usuario:</label>
-				    <h:selectOneMenu class="form-control"  value="#{usuario.usuarioSeleccionado.tipousuario.nombre}">
-	   				<f:selectItems value="#{usuario.tiposUsuarios}" var="tipos" itemValue="#{tipos.nombre}" 
-	   				itemLabel="#{tipos.nombre}"></f:selectItems>
-	   				</h:selectOneMenu>
+	   		       <label for="tipoUsuario" >Tipo de documento:</label>
+				   <h:selectOneMenu value="#{usuario.tipodoc}" class="form-control" >
+   			      <f:selectItem itemValue="CI" itemLabel="CI"/>
+   			      <f:selectItem itemValue="PASAPORTE" itemLabel="Pasaporte" />
+   			      <f:selectItem itemValue="OTROS" itemLabel="Otros" 
+   			      />
+			    </h:selectOneMenu><br/>
 	             </div> 
 	         <div class="col-md-3 mb-3">	
 	   		   <label for="inputDocumento">Documento:</label> 
