--- a/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
@@ -38,7 +38,7 @@
     			<f:param name="id" value="${usuario.id}" />
     	</h:commandButton>
 		</div>
-		<h:messages   style="color:red;margin:8px;" />
+		<h:messages   style="color:red;margin:8px;text-align:center;" />
 		
 	</h:form>
 	<div id="footer" style="bottom:0px" >
