--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -108,7 +108,8 @@
     	</h:commandButton>
 	</div>
 	
-	 <h:messages errorstyle="color:red" infostyle="color:green"   /> <br />
+	 
+	 <h:messages errorStyle="color:red" infoStyle="color:green"   /> <br />
   </div>
 </h:form>
 	 <div id="footer" style="bottom:0px" >
