--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -52,7 +52,7 @@
 					<div class="container">
 						<div class="row">
 				            <div class="col-xs-7"><br/>
-				                <h1>Filtros de Busqueda:</h1>
+				                <h1 style="color:#adad85;">Filtros de Busqueda:</h1>
 				            </div>	
 				        </div>
 						<hr></hr>	
@@ -62,12 +62,12 @@
 				
 	  		     <div class="form-group col-md-4" style="margin-top: 50px;margin-left:100px"> 
 		   			<h:outputLabel value="Usuario" id="usuario" />
-					<h:inputText for="usuario" value="#{usuario.usuario}" class="form-control"/>  
+					<h:inputText for="usuario" value="#{usuario.usuario}" class="form-control" style="border: 1px solid #00b300"/>  
 				 </div>
 				 <div class="form-group col-md-4" style="margin-top: 50px">
 				 
 					<h:outputLabel value="Nombre"/>
-					<h:inputText id="nombre" value="#{usuario.nombre}" class="form-control" />
+					<h:inputText id="nombre" value="#{usuario.nombre}" class="form-control" style="border: 1px solid #00b300" />
 			    </div>
 			    <div class="form-group col-md-3" style="margin-top: 80px">
 					<h:commandButton action="#{usuario.seleccionarUsuarios()}" value="Filtrar" class="btn btn-outline-success"></h:commandButton>
@@ -150,7 +150,7 @@
 				</div><!-- /.col -->
 				<div class="col-md-3">
 					<ul>
-						<li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+						<li><a href="sobrenosotros.xhtml">Sobre Nosotros</a></li>
 						<li><a href="#" data-toggle="modal" data-target="#contacto-modal">Contacto</a></li>
 					</ul>
 				</div><!-- /.col -->
