--- a/TareaPDT_JSF/WebContent/GestionObservaciones/ModificarObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/ModificarObservacion.xhtml
@@ -69,6 +69,7 @@
 	<div style="display:block; text-align:center; margin-top: 20px" >
 	<h:link value="Volver" outcome="ListadoObservaciones.xhtml" class="btn btn-primary" style="float:left;margin-left:40px"/> 
 	<h:commandButton id="idModificar"   value="Modificar" style="margin-left: 40px" action="#{observacion.actualizarObservacion(observacion.observacionSeleccionada)}" class="btn btn-outline-dark">
+	<f:param name="id" value="${observacion.id}" />
     	</h:commandButton><br />
 	</div>
 	
