--- a/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
@@ -20,16 +20,16 @@
 		
 	<ul class="list-group" style="text-align:center">
 	  <li class="list-group-item active bg-success fixed-top">Eliminar Usuario</li>
-	  <li class="list-group-item">Id: #{usuario.id}</li>
-	  <li class="list-group-item">Usuario: #{usuario.usuarioSeleccionado.usuario}</li>
-	  <li class="list-group-item">Nombre: #{usuario.usuarioSeleccionado.nombre}</li>
-	  <li class="list-group-item">Apellido: #{usuario.usuarioSeleccionado.apellido}</li>
-	  <li class="list-group-item">Estado: ACTIVO</li>
-	  <li class="list-group-item">Tipo de Documento: #{usuario.usuarioSeleccionado.tipodoc}</li>
-	  <li class="list-group-item">Numero de Documento: #{usuario.usuarioSeleccionado.numerodoc}</li>
-	  <li class="list-group-item">Direccion: #{usuario.usuarioSeleccionado.direccion}</li>
-	  <li class="list-group-item">Mail: #{usuario.usuarioSeleccionado.mail}</li>
-	  <li class="list-group-item">Tipo de Usuario: #{usuario.usuarioSeleccionado.tipousuario.nombre}</li>
+	  <li class="list-group-item"><strong>Id:</strong> #{usuario.id}</li>
+	  <li class="list-group-item"><strong>Usuario:</strong> #{usuario.usuarioSeleccionado.usuario}</li>
+	  <li class="list-group-item"><strong>Nombre:</strong> #{usuario.usuarioSeleccionado.nombre}</li>
+	  <li class="list-group-item"><strong>Apellido:</strong> #{usuario.usuarioSeleccionado.apellido}</li>
+	  <li class="list-group-item"><strong>Estado:</strong> ACTIVO</li>
+	  <li class="list-group-item"><strong>Tipo de Documento:</strong> #{usuario.usuarioSeleccionado.tipodoc}</li>
+	  <li class="list-group-item"><strong>Numero de Documento:</strong> #{usuario.usuarioSeleccionado.numerodoc}</li>
+	  <li class="list-group-item"><strong>Direccion:</strong> #{usuario.usuarioSeleccionado.direccion}</li>
+	  <li class="list-group-item"><strong>Mail:</strong> #{usuario.usuarioSeleccionado.mail}</li>
+	  <li class="list-group-item"><strong>Tipo de Usuario:</strong> #{usuario.usuarioSeleccionado.tipousuario.nombre}</li>
 	</ul>
 			
 		<div style="display:block; text-align:center; margin-top: 40px">		
@@ -57,7 +57,7 @@
 				</div><!-- /.col -->
 				<div class="col-md-3">
 					<ul>
-						<li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+						<li><a href="../GestionUsuarios/sobrenosotros.xhtml">Sobre Nosotros</a></li>
 						<li><a href="mailto:404NotFound@gmail.com?body=Escriba su mensaje&amp;subject=Consulta desde el formulario de contacto">Contacto</a></li>
 					</ul>
 				</div><!-- /.col -->
