--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -150,8 +150,8 @@
 				</div><!-- /.col -->
 				<div class="col-md-3">
 					<ul>
-						<li><a href="sobrenosotros.xhtml">Sobre Nosotros</a></li>
-						<li><a href="#" data-toggle="modal" data-target="#contacto-modal">Contacto</a></li>
+						<li><a href="../GestionUsuarios/sobrenosotros.xhtml">Sobre Nosotros</a></li>
+						<li><a href="mailto:404NotFound@gmail.com?body=Escriba su mensaje&amp;subject=Consulta desde el formulario de contacto" data-toggle="modal" data-target="#contacto-modal">Contacto</a></li>
 					</ul>
 				</div><!-- /.col -->
 				<div class="col-md-3">
