se cambia el formato de las tables

--- a/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
@@ -62,7 +62,7 @@
 	<h:form id="formTabla">
 	<h:dataTable value="#{observacion.observacionesSeleccionadas}"
 		var="observacion"
-		  class="table table-striped table-dark">
+		  class="table table-hover table-dark">
    
 		<h:column>
 			<f:facet name="header">Codigo</f:facet>    				
