--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -106,7 +106,7 @@
 	<h:form id="formTabla">
 	<h:dataTable value="#{observacion.observacionesFiltradas}"
 		var="obserTabla"
-		  class="table table-striped table-dark">
+		  class="table table-hover table-dark">
    
 		<h:column>
 			<f:facet name="header">Codigo</f:facet>    				
