--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -85,7 +85,7 @@
 	<h:form id="formTabla" >
 	<h:dataTable  value="#{usuario.usuariosSeleccionados}"
 		var="usuTabla"
-		  class="table table-striped table-dark">
+		  class="table table-hover table-dark">
    
 		<h:column>
 			<f:facet name="header">Username</f:facet>    				
