--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -52,7 +52,7 @@
             <a class="nav-link" href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a>
           </li>
           <li>
-            <div class="badge badge-primary">
+            <div class="badge badge-light" style="float:left;margin-top:12px">
              #{login.username}
              </div>
              </li>
