--- a/TareaPDT_JSF/WebContent/GestionUsuarios/LoginLDAP.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/LoginLDAP.xhtml
@@ -21,7 +21,7 @@
 		
 	 	
 			<div class="card"  style="width:22rem;height:20rem" >
-				<div class="card-header bg-success " style="color:white;text-align:center">Login Local</div>	
+				<div class="card-header bg-success " style="color:white;text-align:center">Login LDAP</div>	
 							
 			   	    <h7 class="list-group-item">Usuario:
 				  	 <h:inputText label="Usuario" id="usuario" class="form-control" required="true" a:placeholder="username" maxlength="80" disabled="false" value="#{login.username}" />
@@ -30,7 +30,7 @@
 				     <h:inputSecret label="Password" id="password" class="form-control" required="true" a:placeholder="password" maxlength="80" disabled="false" value="#{login.pass}" />
 				    </h7>
 					<br></br>			
-					<h:commandButton   id="idIngresar"    value="Ingresar" action="#{login.ValidarLogin()}" class="btn btn-success btn-sm btn-block"/>
+					<h:commandButton   id="idIngresar"    value="Ingresar" action="#{login.authenticateJndi(login.username,login.pass)}" class="btn btn-success btn-sm btn-block"/>
 			
       		</div>		
 
