fix login de LDAP

--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Inicio.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Inicio.xhtml
@@ -23,8 +23,8 @@
 			<div class="card"  style="width:22rem;height:20rem" >
 				<div class="card-header bg-success " style="color:white;text-align:center">Modo de inicio</div>	
 					
-					<h:commandLink value="Login con LDAP" 	action="LoginLDAP" class="btn btn-outline-success"></h:commandLink>
-					<h:commandLink value="Login Local" 	action="Login" class="btn btn-outline-success"></h:commandLink>
+					<h:link value="Login con LDAP" 	outcome="LoginLDAP.xhtml" class="btn btn-outline-success"></h:link>
+					<h:link value="Login Local" 	outcome="Login.xhtml" class="btn btn-outline-success"></h:link>					
       		</div>		
 </h:form>
 			 
