--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Login.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Login.xhtml
@@ -32,6 +32,7 @@
 					<br></br>			
 					<h:commandButton   id="idIngresar"    value="Ingresar" action="#{login.ValidarLogin()}" class="btn btn-success btn-sm btn-block"/>
 			
+			<h:link value="Volver al Inicio" 	outcome="Inicio.xhtml" class="btn btn-outline-success"></h:link>					
       		</div>		
 
  <h:messages class="alert alert-danger" role="alert"  errorstyle="color:red" />
