--- a/TareaPDT_JSF/WebContent/GestionUsuarios/LoginLDAP.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/LoginLDAP.xhtml
@@ -30,8 +30,9 @@
 				     <h:inputSecret label="Password" id="password" class="form-control" required="true" a:placeholder="password" maxlength="80" disabled="false" value="#{login.pass}" />
 				    </h7>
 					<br></br>			
-					<h:commandButton   id="idIngresar"    value="Ingresar" action="#{login.authenticateJndi(login.username,login.pass)}" class="btn btn-success btn-sm btn-block"/>
+					<h:commandButton   id="idIngresar"    value="Ingresar" action="#{login.loginLDAP(login.username,login.pass)}" class="btn btn-success btn-sm btn-block"/>
 			
+					<h:link value="Volver al Inicio" 	outcome="Inicio.xhtml" class="btn btn-outline-success"></h:link>					
       		</div>		
 
  <h:messages class="alert alert-danger" role="alert"  errorstyle="color:red" />
