--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Inicio.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Inicio.xhtml
@@ -21,10 +21,10 @@
 		
 	 	
 			<div class="card"  style="width:22rem;height:20rem" >
-				<div class="card-header bg-success " style="color:white;text-align:center">Modo de inicio</div>	
+				<div class="card-header bg-dark " style="color:white;text-align:center">Modo de inicio</div>	
 					
-					<h:link value="Login con LDAP" 	outcome="LoginLDAP.xhtml" class="btn btn-outline-success"></h:link>
-					<h:link value="Login Local" 	outcome="Login.xhtml" class="btn btn-outline-success"></h:link>					
+					<h:link value="Login con LDAP" 	outcome="LoginLDAP.xhtml" style="margin-top: 40px" class="btn btn-outline-success"></h:link>
+					<h:link value="Login Local" 	outcome="Login.xhtml"  style="margin-top: 40px" class="btn btn-outline-success"></h:link>					
       		</div>		
 </h:form>
 			 
