--- a/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:c="http://java.sun.com/jsp/jstl/core_1_1"
       xmlns:o="http://java.sun.com/jsf/html"
-      xmlns:p="http://java.sun.com/jsf/html"> 
+      xmlns:p="http://primefaces.org/ui"
+      > 
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
@@ -48,19 +49,33 @@
 		<f:param name="id" value="${observacion.id}" />
 				</h:commandButton>
 	 </div>	
-	 <div class="vertical-center">		
-		<h:commandButton value="Aprobar"  action="#{observacion.aprobarObservacion(observacion.observacionSeleccionada)}" class="btn btn-success"  style="float:left;margin-left:25px"  disabled="#{observacion.VerificarTipo(login.username)}">
+	 <div class="vertical-center">
+		<p:commandButton value="Aprobar"   class="btn btn-success" action="#{observacion.ApruebaModal()}"  style="float:left;margin-left:25px" update="message">
+		<p:confirm header="Aprobación" message="¿Aprobar Observacion?" icon="pi pi-exclamation-triangle" />
 		<f:param name="id" value="${observacion.id}" />
-		</h:commandButton>
+		</p:commandButton>
+		
+		<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+        <p:commandButton value="Si" type="button" action="#{observacion.aprobarObservacion(observacion.observacionSeleccionada)}" styleClass="ui-confirmdialog-yes" icon="pi pi-check" />
+        <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="pi pi-times" />
+   		 </p:confirmDialog> 
+		
 	 </div>
 	 <div class="vertical-center">	
-		<h:commandButton value="Rechazar" action="#{observacion.rechazarObservacion(observacion.observacionSeleccionada)}" class="btn btn-danger"  style="float:left;margin-left:25px" disabled="#{observacion.VerificarTipo(login.username)}">
+		<p:commandButton value="Rechazar" class="btn btn-danger" action="#{observacion.RechazoModal()}" style="float:left;margin-left:25px" update="message">
+		<p:confirm header="Rechazo" message="¿Rechazar Observación?" icon="pi pi-exclamation-triangle" />
 		<f:param name="id" value="${observacion.id}" />
-		</h:commandButton>
+		</p:commandButton>
+		
+		<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+        <p:commandButton value="Si"  action="#{observacion.rechazarObservacion(observacion.observacionSeleccionada)}"  styleClass="ui-confirmdialog-yes" icon="pi pi-check" />
+        <p:commandButton value="No"  styleClass="ui-confirmdialog-no" icon="pi pi-times" />
+    	</p:confirmDialog>
 	</div>	
 </div><br/><br/>
 			<h:messages style="color:red;margin:8px;" /><br/><br/>
-	
+				 	<p:growl id="message" showDetail="true" />		
+			
 			
 		</h:form>
 	 <div id="footer">
